--- a/01_NLP/01_NLP_whit_NLTK.ipynb
+++ b/01_NLP/01_NLP_whit_NLTK.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.2.5'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "import os\n",
@@ -39,17 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/Users/jorge/nltk_data', '/usr/share/nltk_data', '/usr/local/share/nltk_data', '/usr/lib/nltk_data', '/usr/local/lib/nltk_data', '/Users/jorge/anaconda3/nltk_data', '/Users/jorge/anaconda3/lib/nltk_data']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The linguistic resources must be instaled in the nltk_data dir.\n",
     "\n",
@@ -59,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/Users/jorge/nltk_data', '/usr/share/nltk_data', '/usr/local/share/nltk_data', '/usr/lib/nltk_data', '/usr/local/lib/nltk_data', '/Users/jorge/anaconda3/nltk_data', '/Users/jorge/anaconda3/lib/nltk_data', '/tmp']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If you plan to use another dir, add it\n",
     "\n",
@@ -81,28 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /Users/jorge/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download resources of NLTK data\n",
     "nltk.download('punkt') # Punkt Tokenizer Models\n",
@@ -119,28 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package brown to /Users/jorge/nltk_data...\n",
-      "[nltk_data]   Package brown is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download the Brown corpus\n",
     "nltk.download('brown') \n"
@@ -148,21 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Corpus len: 1161192\n",
-      "The first 10 words: ['The', 'Fulton', 'County', 'Grand', 'Jury', 'said', 'Friday', 'an', 'investigation', 'of']\n",
-      "The first 10 tagged words: [('The', 'AT'), ('Fulton', 'NP-TL'), ('County', 'NN-TL'), ('Grand', 'JJ-TL'), ('Jury', 'NN-TL'), ('said', 'VBD'), ('Friday', 'NR'), ('an', 'AT'), ('investigation', 'NN'), ('of', 'IN')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Then you can load it\n",
+    "# Then you can import it\n",
     "from nltk.corpus import brown\n",
     "\n",
     "print('Corpus len:', len(brown.words()))\n",
@@ -175,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -192,17 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['this’s a sent tokenize test.', 'tis is sennt two.', 'is this sent three?', 'sent 4 is cool!', 'Now it’s your turn.']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the predefined sentence tokenizer.\n",
     "from nltk.tokenize import sent_tokenize\n",
@@ -215,24 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['this’s a sent tokenize test.',\n",
-       " 'this is sent two.',\n",
-       " 'is this sent three?',\n",
-       " 'sent 4 is cool!',\n",
-       " 'Now it’s your turn.']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use explicity the punkt english sentence tokenizer\n",
     "tokenizer = nltk.data.load('tokenizers/punkt/english.pickle')\n",
@@ -241,20 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['¡Buenos días!', '¿Estas bien?']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use explicity the spanish sentence tokenizer\n",
     "spanish_tokenizer = nltk.data.load('tokenizers/punkt/spanish.pickle')\n",
@@ -263,38 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['greek.pickle',\n",
-       " 'estonian.pickle',\n",
-       " 'turkish.pickle',\n",
-       " 'polish.pickle',\n",
-       " 'PY3',\n",
-       " 'czech.pickle',\n",
-       " 'portuguese.pickle',\n",
-       " 'README',\n",
-       " 'dutch.pickle',\n",
-       " 'norwegian.pickle',\n",
-       " 'slovene.pickle',\n",
-       " 'english.pickle',\n",
-       " 'danish.pickle',\n",
-       " 'finnish.pickle',\n",
-       " 'swedish.pickle',\n",
-       " 'spanish.pickle',\n",
-       " 'german.pickle',\n",
-       " 'italian.pickle',\n",
-       " 'french.pickle']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List of sentence tokenizers available in the punkt module\n",
     "os.listdir(nltk.data.path[0]+'/tokenizers/punkt/')\n",
@@ -304,18 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Hello', 'World', '!']\n",
-      "['Ca', \"n't\", 'is', 'a', 'contraction', '.']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Word tokenizer\n",
     "from nltk.tokenize import word_tokenize\n",
@@ -326,18 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\"Can't\", 'is', 'a', 'contraction.']\n",
-      "['Can', \"'\", 't', 'is', 'a', 'contraction', '.']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Others word tokenizers\n",
     "from nltk.tokenize import WhitespaceTokenizer\n",
@@ -352,17 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['El', 'Dpto', 'de', 'RR.HH', '.', 'ha', 'lanzado', '1.000', 'ofertas', 'de', 'trabajo', 'en', 'Buenos', 'Aires', '.', '3,25€', 'perdidos', 'en', 'Madrid', 'el', '2/11/2017', '.', 'Las', 'herramientas', '[', 'h1', 'y', 'h2', ']', 'son', 'compatibles', '.']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# word_tokenize must be used over sentences of the text\n",
     "\n",
@@ -387,19 +221,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to /Users/jorge/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[\"Can't\", 'contraction']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Stopwords\n",
     "nltk.download('stopwords')\n",
@@ -415,18 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available stopwords lists: ['arabic', 'azerbaijani', 'danish', 'dutch', 'english', 'finnish', 'french', 'german', 'greek', 'hungarian', 'indonesian', 'italian', 'kazakh', 'nepali', 'norwegian', 'portuguese', 'romanian', 'russian', 'spanish', 'swedish', 'turkish']\n",
-      "Stop words spanish: ['de', 'la', 'que', 'el', 'en', 'y', 'a', 'los', 'del', 'se', 'las', 'por', 'un', 'para', 'con', 'no', 'una', 'su', 'al', 'lo', 'como', 'más', 'pero', 'sus', 'le', 'ya', 'o', 'este', 'sí', 'porque', 'esta', 'entre', 'cuando', 'muy', 'sin', 'sobre', 'también', 'me', 'hasta', 'hay', 'donde', 'quien', 'desde', 'todo', 'nos', 'durante', 'todos', 'uno', 'les', 'ni', 'contra', 'otros', 'ese', 'eso', 'ante', 'ellos', 'e', 'esto', 'mí', 'antes', 'algunos', 'qué', 'unos', 'yo', 'otro', 'otras', 'otra', 'él', 'tanto', 'esa', 'estos', 'mucho', 'quienes', 'nada', 'muchos', 'cual', 'poco', 'ella', 'estar', 'estas', 'algunas', 'algo', 'nosotros', 'mi', 'mis', 'tú', 'te', 'ti', 'tu', 'tus', 'ellas', 'nosotras', 'vosostros', 'vosostras', 'os', 'mío', 'mía', 'míos', 'mías', 'tuyo', 'tuya', 'tuyos', 'tuyas', 'suyo', 'suya', 'suyos', 'suyas', 'nuestro', 'nuestra', 'nuestros', 'nuestras', 'vuestro', 'vuestra', 'vuestros', 'vuestras', 'esos', 'esas', 'estoy', 'estás', 'está', 'estamos', 'estáis', 'están', 'esté', 'estés', 'estemos', 'estéis', 'estén', 'estaré', 'estarás', 'estará', 'estaremos', 'estaréis', 'estarán', 'estaría', 'estarías', 'estaríamos', 'estaríais', 'estarían', 'estaba', 'estabas', 'estábamos', 'estabais', 'estaban', 'estuve', 'estuviste', 'estuvo', 'estuvimos', 'estuvisteis', 'estuvieron', 'estuviera', 'estuvieras', 'estuviéramos', 'estuvierais', 'estuvieran', 'estuviese', 'estuvieses', 'estuviésemos', 'estuvieseis', 'estuviesen', 'estando', 'estado', 'estada', 'estados', 'estadas', 'estad', 'he', 'has', 'ha', 'hemos', 'habéis', 'han', 'haya', 'hayas', 'hayamos', 'hayáis', 'hayan', 'habré', 'habrás', 'habrá', 'habremos', 'habréis', 'habrán', 'habría', 'habrías', 'habríamos', 'habríais', 'habrían', 'había', 'habías', 'habíamos', 'habíais', 'habían', 'hube', 'hubiste', 'hubo', 'hubimos', 'hubisteis', 'hubieron', 'hubiera', 'hubieras', 'hubiéramos', 'hubierais', 'hubieran', 'hubiese', 'hubieses', 'hubiésemos', 'hubieseis', 'hubiesen', 'habiendo', 'habido', 'habida', 'habidos', 'habidas', 'soy', 'eres', 'es', 'somos', 'sois', 'son', 'sea', 'seas', 'seamos', 'seáis', 'sean', 'seré', 'serás', 'será', 'seremos', 'seréis', 'serán', 'sería', 'serías', 'seríamos', 'seríais', 'serían', 'era', 'eras', 'éramos', 'erais', 'eran', 'fui', 'fuiste', 'fue', 'fuimos', 'fuisteis', 'fueron', 'fuera', 'fueras', 'fuéramos', 'fuerais', 'fueran', 'fuese', 'fueses', 'fuésemos', 'fueseis', 'fuesen', 'sintiendo', 'sentido', 'sentida', 'sentidos', 'sentidas', 'siente', 'sentid', 'tengo', 'tienes', 'tiene', 'tenemos', 'tenéis', 'tienen', 'tenga', 'tengas', 'tengamos', 'tengáis', 'tengan', 'tendré', 'tendrás', 'tendrá', 'tendremos', 'tendréis', 'tendrán', 'tendría', 'tendrías', 'tendríamos', 'tendríais', 'tendrían', 'tenía', 'tenías', 'teníamos', 'teníais', 'tenían', 'tuve', 'tuviste', 'tuvo', 'tuvimos', 'tuvisteis', 'tuvieron', 'tuviera', 'tuvieras', 'tuviéramos', 'tuvierais', 'tuvieran', 'tuviese', 'tuvieses', 'tuviésemos', 'tuvieseis', 'tuviesen', 'teniendo', 'tenido', 'tenida', 'tenidos', 'tenidas', 'tened']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Available stopwords lists:', stopwords.fileids())\n",
     "\n",
@@ -444,18 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Los datos son 23.5 y -12.8 [Medidos en unidades].\n",
-      "los datos son DIGIT y DIGIT  medidos en unidades .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Regular expressions to clean text\n",
     "import re\n",
@@ -487,9 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -502,22 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /Users/jorge/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n",
-      "['dive', 'into', 'NLTK', ':', 'Part-of-speech', 'tagging', 'and', 'POS', 'Tagger']\n",
-      "[('dive', 'NN'), ('into', 'IN'), ('NLTK', 'NNP'), (':', ':'), ('Part-of-speech', 'JJ'), ('tagging', 'NN'), ('and', 'CC'), ('POS', 'NNP'), ('Tagger', 'NNP')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download the POS model\n",
     "nltk.download('averaged_perceptron_tagger')\n",
@@ -531,21 +322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JJ: adjective or numeral, ordinal\n",
-      "    third ill-mannered pre-war regrettable oiled calamitous first separable\n",
-      "    ectoplasmic battery-powered participatory fourth still-to-be-named\n",
-      "    multilingual multi-disciplinary ...\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Understand the tagset of the POS model\n",
     "#nltk.download('tagsets')\n",
@@ -556,9 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -571,39 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Porter stemmer:\n",
-      "---------------\n",
-      "maximum\n",
-      "presum\n",
-      "multipli\n",
-      "provis\n",
-      "say \n",
-      "\n",
-      "Lancaster stemmer:\n",
-      "---------------\n",
-      "maxim\n",
-      "presum\n",
-      "multiply\n",
-      "provid\n",
-      "say \n",
-      "\n",
-      "Snowball stemmer:\n",
-      "---------------\n",
-      "maximum\n",
-      "presum\n",
-      "multipli\n",
-      "provis\n",
-      "say\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem.porter import PorterStemmer\n",
     "\n",
@@ -643,17 +390,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available naguages in snowball setemmer: arabic danish dutch english finnish french german hungarian italian norwegian porter portuguese romanian russian spanish swedish\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import SnowballStemmer\n",
     "print('Available languages in snowball stemmer:', \" \".join(SnowballStemmer.languages))"
@@ -661,20 +400,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'semanal'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  Test for the spanish language\n",
     "from nltk.stem.snowball import SpanishStemmer\n",
@@ -685,9 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -700,25 +426,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample of lemmatizations:\n",
-      "dog\n",
-      "church\n",
-      "abacus\n",
-      "are \n",
-      "\n",
-      "Lemma of \"is\", no POS: is\n",
-      "Lemma of \"is\", whit POS: be\n",
-      "Lemma of \"are\", whit POS: be\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#nltk.download('wordnet') \n",
     "\n",
@@ -743,9 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -758,10 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Integrating the treebank POS tags to wordnet compatible pos tags\n",
@@ -784,18 +490,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['You', 'are', 'good', 'friends', '.'], ['We', 'had', 'two', 'houses', 'that', 'are', 'bigger', '!']]\n",
-      "[['You', 'be', 'good', 'friend', '.'], ['We', 'have', 'two', 'house', 'that', 'be', 'big', '!']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = \"You are good friends. We had two houses that are bigger!\"\n",
     "\n",
@@ -829,18 +526,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:tm]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tm-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -852,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
