--- a/02_text_classification_sklearn/02_sklearn_basics.ipynb
+++ b/02_text_classification_sklearn/02_sklearn_basics.ipynb
@@ -149,10 +149,7 @@
     "...\n",
     "\n",
     "# Evaluate test accuracy with accuracy_score\n",
-    "print('Tree accuracy test: ', ...)\n",
-    "\n",
-    "# Evaluate ROC area with roc_auc_score\n",
-    "print('Tree average ROC area: ', ...)\n"
+    "print('Tree accuracy test: ', ...)\n"
    ]
   },
   {
@@ -224,9 +221,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:tm]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tm-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -238,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
