--- a/02_text_classification_sklearn/02_sklearn_basics_SOLVED.ipynb
+++ b/02_text_classification_sklearn/02_sklearn_basics_SOLVED.ipynb
@@ -15,17 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sklearn version: 0.19.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "\n",
@@ -42,79 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iris Plants Database\n",
-      "====================\n",
-      "\n",
-      "Notes\n",
-      "-----\n",
-      "Data Set Characteristics:\n",
-      "    :Number of Instances: 150 (50 in each of three classes)\n",
-      "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
-      "    :Attribute Information:\n",
-      "        - sepal length in cm\n",
-      "        - sepal width in cm\n",
-      "        - petal length in cm\n",
-      "        - petal width in cm\n",
-      "        - class:\n",
-      "                - Iris-Setosa\n",
-      "                - Iris-Versicolour\n",
-      "                - Iris-Virginica\n",
-      "    :Summary Statistics:\n",
-      "\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "                    Min  Max   Mean    SD   Class Correlation\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "    sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
-      "    sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
-      "    petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
-      "    petal width:    0.1  2.5   1.20  0.76     0.9565  (high!)\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "    :Class Distribution: 33.3% for each of 3 classes.\n",
-      "    :Creator: R.A. Fisher\n",
-      "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
-      "    :Date: July, 1988\n",
-      "\n",
-      "This is a copy of UCI ML iris datasets.\n",
-      "http://archive.ics.uci.edu/ml/datasets/Iris\n",
-      "\n",
-      "The famous Iris database, first used by Sir R.A Fisher\n",
-      "\n",
-      "This is perhaps the best known database to be found in the\n",
-      "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
-      "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
-      "data set contains 3 classes of 50 instances each, where each class refers to a\n",
-      "type of iris plant.  One class is linearly separable from the other 2; the\n",
-      "latter are NOT linearly separable from each other.\n",
-      "\n",
-      "References\n",
-      "----------\n",
-      "   - Fisher,R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "   - Duda,R.O., & Hart,P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "     Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "     on Information Theory, May 1972, 431-433.\n",
-      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "     conceptual clustering system finds 3 classes in the data.\n",
-      "   - Many, many more ...\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import datasets\n",
     "\n",
@@ -124,31 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[5.1 3.5 1.4 0.2]\n",
-      " [4.9 3.  1.4 0.2]\n",
-      " [4.7 3.2 1.3 0.2]\n",
-      " [4.6 3.1 1.5 0.2]\n",
-      " [5.  3.6 1.4 0.2]\n",
-      " [5.4 3.9 1.7 0.4]\n",
-      " [4.6 3.4 1.4 0.3]\n",
-      " [5.  3.4 1.5 0.2]\n",
-      " [4.4 2.9 1.4 0.2]\n",
-      " [4.9 3.1 1.5 0.1]]\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print some data lines\n",
     "print(iris.data[:10])\n",
@@ -157,17 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 4) (50, 4) (100,) (50,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Randomize and separate train & test\n",
     "from sklearn.utils import shuffle\n",
@@ -188,23 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Linear model \n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -218,17 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy test:  0.94\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Evaluate accuracy in test\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -252,17 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tree accuracy test:  0.94\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import tree\n",
     "\n",
@@ -287,17 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.96\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Configure model\n",
     "from sklearn import svm\n",
@@ -319,28 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2.43289285e-05 4.36928609e-01 5.63047062e-01]\n",
-      " [1.19671489e-03 3.16095051e-01 6.82708234e-01]\n",
-      " [4.61332864e-03 3.56328255e-01 6.39058416e-01]\n",
-      " [8.59151061e-01 1.40807092e-01 4.18472484e-05]\n",
-      " [2.11461639e-02 7.24592757e-01 2.54261079e-01]]\n",
-      "Test classes:  [0 1 2]\n",
-      "[[0 0 1]\n",
-      " [0 0 1]\n",
-      " [0 0 1]\n",
-      " [1 0 0]\n",
-      " [0 1 0]]\n",
-      "Average ROC area:  0.9755555555555556\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ROC area\n",
     "\n",
@@ -367,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -377,9 +210,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:tm]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tm-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -391,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
