--- a/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
+++ b/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
@@ -453,9 +453,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:tm]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tm-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -467,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
